# PaRsk

./: .gitignore  .gitlab-ci.yml  README.md  clipboard.txt
c-sim/: main.c
emulator/source/: CMakeLists.txt  main.c
emulator/source/modules/: config.h  controller.h  regfile.c  rv32i.h
